src/test/deca/context/valid/created/miscellaneous/inst.deca
// Description :
//		Programme avec quelques instructions
//
// Resultats :
//		Ok

{
int a = 3;
int b = 5;
b = a + b;
return b;
}