src/test/deca/context/invalid/created/return/return_double_float.deca
// Description :
//    test double return avec float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: 

class a{
float met(){
float a = 0.5;
return a;return a;}
}
